--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Julia's Profile</title>
+  <title>-Julia's Profile-</title>
   <meta charset="utf-8">
   <!-- google -->
   <meta name="description" content="Julia's Profile - A passionate Frontend Developer">
