--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>-Julia's Profile-</title>
+  <title>Julia's Profile</title>
   <meta charset="utf-8">
   <!-- google -->
   <meta name="description" content="Julia's Profile - A passionate Frontend Developer">
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700|Roboto:100,300" rel="stylesheet">
   <!-- style sheets -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <!-- responsive  -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -25,28 +25,52 @@
     <img src="images/profile_image_julia.png" alt="Julia">
     <h1>Hey there, I'm Julia</h1>
     <h4><em>I am an entrepreneur, designer, front-end developer and illustrator.</em></h4>
-    <p>My passion is to build beautiful products that help travelers:
+  </div>
+
+
+  <div class="card-white inline"><br>
+    <h3>I am the cofounder of Cooktour</h3><br>
+    <h4>My startup helps travelers feel like locals by:</h4>
     <div class="list-skills">
       <ul>
-        <li>find relevant information</li>
-        <li>make better and faster decisions</li>
-        <li>learn about local culture in new places</li>
+        <li>Helping them find the information they care about</li>
+        <li>Routing them to the right place to make better & faster decisions</li>
+        <li>Inspiring them to learn about cultures & feel like locals anywhere</li>
       </ul>
     </div>
     </p>
-  </div>
-
-
-  <div class="card-white inline">
-    <h3>I am the cofounder of Cooktour</h3><br>
     <a href="https://www.cooktour.com" target="_blank" class="button">Learn more</a>
   </div>
 
+   <div class="container">
   <div class="card-white">
+    <h3>My dream is to help people find their passion <br> and reach their goals</h3><br>
+    <h4>I love building beautiful products to realize my dream</h4><br>
+
+    <div class="cards">
+      <div class="card">
+        <img src="images/create-account.svg" alt="">
+        <h3>Memolingo</h3>
+        <p>Memory game, story book and language course</p>
+        <a href="https://www.memolingo.io" target="_blank" class="button">Learn more</a>
+      </div>
+
+      <div class="card">
+        <img src="images/conversation-partner.svg" alt="">
+        <h3>Girangodesign</h3>
+        <p>Personalized designs for your favorite products</p>
+        <a href="https://www.girangodesign.com" target="_blank" class="button">Learn more</a>
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="footer">
     <h2>Follow me</h2>
     <ul class="list-inline">
       <li>
-        <a href="https://github.com/kimmig" target="_blank"><i class="fab fa-github-square"::before></i></a>
+        <a href="https://github.com/juliakimmig" target="_blank"><i class="fab fa-github-square"::before></i></a>
       </li>
       <li>
         <a href="https://www.linkedin.com/in/julia-kimmig-49709492/" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -56,6 +80,9 @@
       </li>
     </ul>
   </div>
+
+
+
 </div>
 
 
